# WattPredictor

./: .dockerignore  .gitignore  Dockerfile  INTERVIEW_GUIDE.md  LICENSE  PROJECT_COMPLETE.md  README.md  app.py  dvc.yaml  main.py  model.joblib  old_readme.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  temp_old_readme.md  template.py  test_features.csv  test_y.parquet  train_features.csv
.github/workflows/: ci-cd.yml  cicd.yaml
artifacts/trainer/: model.joblib
config_file/: config.yaml  params.yaml  schema.yaml
k8s/: deployment.yaml  secrets.yaml  service.yaml
mlruns/0/: meta.yaml
mlruns/141997247217478997/: meta.yaml
mlruns/141997247217478997/0b3939e9e4a7437ab301f3c869550c7b/: meta.yaml
mlruns/141997247217478997/0b3939e9e4a7437ab301f3c869550c7b/metrics/: adjusted_r2  mae  mape  mse  r2_score  rmse
mlruns/141997247217478997/1a5265a10f904d6f9ec032b05dba44c5/: meta.yaml
mlruns/141997247217478997/1a5265a10f904d6f9ec032b05dba44c5/metrics/: cv_rmse
mlruns/141997247217478997/1a5265a10f904d6f9ec032b05dba44c5/params/: learning_rate
mlruns/141997247217478997/2f341d852d9e4646bf4c1bd05c70f6be/: meta.yaml
mlruns/141997247217478997/2f341d852d9e4646bf4c1bd05c70f6be/metrics/: cv_rmse
mlruns/141997247217478997/2f341d852d9e4646bf4c1bd05c70f6be/params/: learning_rate
mlruns/141997247217478997/34589416a8874f86a0a7a8068af9f141/: meta.yaml
mlruns/141997247217478997/34589416a8874f86a0a7a8068af9f141/metrics/: adjusted_r2  mae  mape  mse  r2_score  rmse
mlruns/141997247217478997/4636426891ea487398c023ec237039bd/: meta.yaml
mlruns/141997247217478997/4636426891ea487398c023ec237039bd/metrics/: cv_rmse
mlruns/141997247217478997/4636426891ea487398c023ec237039bd/params/: learning_rate
mlruns/141997247217478997/76bacdfdfb064a8a9db2cd51afd94692/: meta.yaml
mlruns/141997247217478997/76bacdfdfb064a8a9db2cd51afd94692/metrics/: cv_rmse
mlruns/141997247217478997/bbf768aafc1b43d0af7251faab6b1c29/: meta.yaml
mlruns/141997247217478997/df295fb53e6841ad97cea79330eff14c/: meta.yaml
notebooks/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_training.ipynb  05_model_evaluation.ipynb  06_drift_monitoring.ipynb  07_predictor.ipynb  08_monitoring.ipynb  eda.ipynb  sss.ipynb
src/WattPredictor/components/: data_drift.py  data_ingestion.py  data_transformation.py  data_validation.py  feature_store.py  model_evaluation.py  model_registry.py  model_training.py
src/WattPredictor/config/: __init__.py  config.py  config_manager.py  data_config.py  feature_config.py  inference_config.py  model_config.py
src/WattPredictor/constants/: paths.py
src/WattPredictor/entity/: config_entity.py
src/WattPredictor/pipeline/: feature_pipeline.py  inference_pipeline.py  monitoring_pipeline.py  stage01_ingestion.py  stage02_validation.py  stage03_transformation.py  stage04_trainer.py  stage05_evaluation.py  stage06_drift.py  training_pipeline.py
src/WattPredictor/pipelines/: stage_01.py  stage_02.py
src/WattPredictor/utils/: api_client.py  business_metrics.py  exception.py  feature.py  helpers.py  logging.py  plot.py  ts_generator.py
tests/: test_api_client.py  test_basic.py  test_evaluation.py  test_features.py  test_ingestion.py  test_integration.py  test_models.py  test_trainer.py  test_transformation.py  test_validation.py
(+19 files in other folders)
