[tool.poetry]
name = "WattPredictor"
version = "0.1.0"
description = "Electricity demand forecasting ML project"
authors = ["JavithNaseem-J <javithnaseem.j@gmail.com>"]
packages = [{ include = "WattPredictor", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

# Core packages
pandas = "*"
numpy = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
joblib = "*"
tqdm = "*"
scipy = "*"
pyyaml = "^6.0.1"
python-box = "*"
ensure = "*"
dotenv = "*"

# ML packages
xgboost = "*"
lightgbm = "*"
optuna = "*"
imblearn = "*"

# Experiment tracking
mlflow = "*"
dagshub = "*"

# Hopsworks & Feature Store
hopsworks = "*"
hsfs = "*"

# Evidently + version pinning fix
evidently = "*"
pydantic = "1.10.13"

# MLOps & data versioning
dvc = "*"
dvc-s3 = "*"

# Weather API dependencies
openmeteo_requests = "*"
requests_cache = "*"
retry_requests = "*"
requests = "*"

# Environment & config
python-multipart = "*"
types-pyyaml = "*"

# Misc
gdown = "*"
boto3 = "*"
ydata-profiling = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
ipykernel = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
