[tool.poetry]
name = "WattPredictor"
version = "0.1.0"
description = "Electricity demand forecasting ML project"
authors = ["JavithNaseem-J <javithnaseem.j@gmail.com>"]
packages = [{ include = "WattPredictor", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

# Core packages
pandas = "^2.0.3"
numpy = "^1.25.2"
scikit-learn = "^1.6.1"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
joblib = "^1.5.1"
tqdm = "^4.67.1"
scipy = "^1.11.4"
pyyaml = "^6.0.2"
python-box = "^7.3.2"
ensure = "^1.0.4"
python-dotenv = "^1.1.1"

# ML packages
xgboost = "^3.0.2"
lightgbm = "^4.6.0"
optuna = "^4.4.0"
imblearn = "^0.0"

# Experiment tracking
mlflow = "^3.1.1"
dagshub = "^0.2.7"

# Hopsworks & Feature Store
hopsworks = "^4.2.6"
hsfs = "^3.7.9"

# MLOps & data versioning
evidently = "^0.6.6"
pydantic = "1.10.13" 
dvc = "^3.61.0"
dvc-s3 = "^3.2.2"

# Weather API dependencies
openmeteo_requests = "^1.5.0"
requests_cache = "^1.2.1"
retry_requests = "^2.0.0"
requests = "^2.32.4"

# Environment & config
python-multipart = "^0.0.20"
types-pyyaml = "^6.0.12"

# Misc
gdown = "^5.2.0"
boto3 = "^1.38.27"
ydata-profiling = "^4.6.0"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pytest = "^8.4.1"
confluent-kafka = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"